# huddle01-mcp

./: .env.example  README.md  makefile  pyproject.toml  requirements.txt  run.py
app/: config.py  main.py
app/mcp/: __init__.py  client.py  main.py  server.py  tools.py
