[project]
name = "huddle01-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for seamless integration with Huddle01's video conferencing platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.9.0",
    "httpx>=0.28.1",
    "ruff>=0.12.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
